[gd_scene load_steps=3 format=3 uid="uid://cgrei0bayox1g"]

[ext_resource type="Script" path="res://scenes/spawn_area.gd" id="1_a2vic"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8whcm"]
size = Vector2(256, 224)

[node name="spawn_area" type="Area2D"]
collision_layer = 128
collision_mask = 255
script = ExtResource("1_a2vic")

[node name="shape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_8whcm")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
